--- a/package.json
+++ b/package.json
@@ -21,54 +21,42 @@
     "classnames": "^2.1.1",
     "prop-types": "^15.5.10",
     "react-transition-group": "^4.4.1",
-    "sass": "^1.84.0",
-    "sass-loader": "^16.0.4",
     "webpack-livereload-plugin": "^3.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.26.4",
     "@babel/core": "^7.26.7",
     "@babel/node": "^7.26.0",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/polyfill": "^7.11.5",
     "@babel/preset-env": "^7.26.7",
     "@babel/preset-react": "^7.10.4",
     "autoprefixer": "^10.4.20",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^9.2.1",
     "bootstrap": "^5.3.3",
-    "camelcase": "^4.1.0",
-    "clean-webpack-plugin": "^0.1.9",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "cssnano": "^7.0.6",
-    "del": "^3.0.0",
-    "eslint": "^7.7.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-loader": "^4.0.2",
+    "del": "^8.0.0",
+    "eslint": "^9.20.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "express": "^4.21.2",
     "file-loader": "^6.2.0",
     "globby": "^14.0.2",
-    "gulp": "^5.0.0",
-    "gulp-babel": "^8.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-postcss": "^10.0.0",
-    "gulp-sass": "^6.0.0",
     "html-webpack-plugin": "^5.6.3",
     "http-proxy": "^1.18.1",
-    "mini-css-extract-plugin": "^0.11.0",
+    "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8.5.1",
     "postcss-loader": "^8.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
-    "regenerator-runtime": "^0.13.7",
-    "run-sequence": "^1.2.2",
+    "regenerator-runtime": "^0.14.1",
+    "sass": "^1.84.0",
+    "sass-loader": "^16.0.4",
+    "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0",
