--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uc-react-notifications",
+  "name": "react-notifications",
   "version": "1.7.4",
   "description": "Notification component for ReactJS",
   "main": "src/index.js",
@@ -26,7 +26,6 @@
   "devDependencies": {
     "@babel/core": "^7.26.7",
     "@babel/node": "^7.26.0",
-    "@babel/polyfill": "^7.11.5",
     "@babel/preset-env": "^7.26.7",
     "@babel/preset-react": "^7.10.4",
     "autoprefixer": "^10.4.20",
