--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@babel/preset-env": "^7.26.7",
     "@babel/preset-react": "^7.10.4",
     "autoprefixer": "^10.4.20",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^9.2.1",
     "bootstrap": "^5.3.3",
     "cross-env": "^7.0.3",
@@ -58,8 +57,7 @@
     "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0",
-    "webpack-stream": "^7.0.0"
+    "webpack-dev-server": "^5.2.0"
   },
   "repository": {
     "type": "git",
