--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "webpack-dev-server": "^5.2.0",
+    "typescript": "^5.7.3"
   },
   "repository": {
     "type": "git",
