--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
   ],
   "dependencies": {
     "acorn": "8.14.0",
-    "classnames": "^2.1.1",
-    "prop-types": "^15.5.10",
     "react-transition-group": "^4.4.1",
     "webpack-livereload-plugin": "^3.0.2"
   },
@@ -28,6 +26,9 @@
     "@babel/node": "^7.26.0",
     "@babel/preset-env": "^7.26.7",
     "@babel/preset-react": "^7.10.4",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@types/react-transition-group": "^4.4.12",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "bootstrap": "^5.3.3",
@@ -55,10 +56,11 @@
     "sass": "^1.84.0",
     "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0",
-    "typescript": "^5.7.3"
+    "webpack-dev-server": "^5.2.0"
   },
   "repository": {
     "type": "git",
