--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,35 @@
 {
     "compilerOptions": {
-      "outDir": "./built",
+      "outDir": "dist",
       "allowJs": true,
-      "target": "es5"
+      "module": "es6",
+      "lib": [
+        "dom",
+        "esnext"
+      ],
+      "moduleResolution": "node",
+      "jsx": "react",
+      "sourceMap": true,
+      "declaration": true,
+      "esModuleInterop": true,
+      "noImplicitReturns": true,
+      "noImplicitThis": true,
+      "noImplicitAny": true,
+      "strictNullChecks": true,
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
+      "allowSyntheticDefaultImports": true,
+      "target": "es5",
+      "skipLibCheck": true,
+      "strict": true,
+      "forceConsistentCasingInFileNames": true,
+      "resolveJsonModule": true,
+      "isolatedModules": true
     },
-    "include": ["./src/**/*"]
+    "include": ["./src/**/*"],
+    "exclude": [
+        "node_modules",
+        "dist",
+        "example"
+    ]
   }
