--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.7.5-beta.0",
   "description": "Notification component for ReactJS",
   "module": "dist/react-notifications.js",
+  "main": "./dist/react-notifications.js",
   "type": "module",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --config ./example/webpack.config.babel.js",
